--- a/src/main/resources/templates/registration/success.html
+++ b/src/main/resources/templates/registration/success.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Successful registration</title>
+    <title th:text="#{registration.success.page-title}">Successful registration</title>
 </head>
 <body>
 <section>
-    <h1>Your account have been created</h1>
-    <h2>Please log in and start using Eventuator</h2>
+    <h1 th:text="#{registration.success.title}">Your account have been created</h1>
+    <h2 th:text="#{registration.success.subtitle}">Please log in and start using Eventuator</h2>
 </section>
 </body>
 </html>
